Improve the performance of anti-spam detection #749